src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Bypass_Validation_Workflow_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for user performing conversion to by-pass validation and workflow rules when performing data conversion. This should only be give to users performing data conversions, and should not be distributed to functional users.</description>
        <label>Bypass Validation/Workflow Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Portal_User__c</fullName>
        <description>Is this a portal user?</description>
        <formula>OR(ISPICKVAL(UserType, &apos;CspLitePortal&apos;), ISPICKVAL(UserType, &apos;PowerCustomerSuccess&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__BG_BlueBeam_Email_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BlueBeam Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MUSW__Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Mapping_Service_API__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mapping Service API</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Mapping_Service_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mapping Service Key</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Mapping_Service_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mapping Service Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Step_Through__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step Through</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Successor__c</fullName>
        <description>The succeeding User will inherit all records currently associated with the User being deactivated</description>
        <inlineHelpText>The succeeding User will inherit all records currently associated with the User being deactivated</inlineHelpText>
        <label>Successor</label>
        <relationshipName>InactiveUsers</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>MUSW__TempEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TempEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MUSW__TempPassword__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TempPassword</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__isFutureRunning__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Stop processes that are running in future mode to call other future processes.</inlineHelpText>
        <label>Running in future (System Only)</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Back_Office_Staff</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>eSLA Customer Community Plus Login User</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Sytem Admin- Read Only</value>
        </filters>
        <label>Back Office Staff</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Admin_Group</group>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>MUSW__Inactive_User_must_have_a_Successor</fullName>
        <active>false</active>
        <description>A newly inactive user must specify a Successor for record hand-over.</description>
        <errorConditionFormula>ContactId != null &amp;&amp; PRIORVALUE(IsActive) = true &amp;&amp; IsActive = false &amp;&amp; MUSW__Successor__c = null</errorConditionFormula>
        <errorDisplayField>MUSW__Successor__c</errorDisplayField>
        <errorMessage>Inactive User must have a Successor</errorMessage>
    </validationRules>
</CustomObject>